--- a/style.css
+++ b/style.css
@@ -1672,6 +1672,19 @@ blockquote.has-text-align-right,
 	margin-top: 32px;
 }
 
+@media (min-width: 1024px) {
+	.thumbnail-header-background:not(.no-sidebar) .sidebar {
+		position: relative;
+		margin-top: 24px;
+	}
+	.thumbnail-header-background:not(.no-sidebar) .entry-header {
+		width: calc(100% + 332px);
+	}
+	.thumbnail-header-background.sidebar-left .entry-header {
+		left: -332px;
+	}
+}
+
 .widget {
 	font-size: var(--text-sm);
 }
